--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ dependencies = [
     "agno>=1.6.4",
     "duckduckgo-search>=8.0.4",
     "fastapi[standard]>=0.115.13",
+    "fastmcp>=2.9.2",
     "google-genai>=1.22.0",
+    "nest-asyncio>=1.6.0",
     "python-dotenv>=1.1.1",
     "sqlalchemy>=2.0.41",
     "uvicorn>=0.34.3",
